# medical_platform

./: pyproject.toml
src/: main.py
